--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -2,14 +2,42 @@
 	<div id="add_widget"><%= link_to '+ Add a New User', new_user_path %></div>
 <% end %>
 
+<% if current_user.is_admin? && !@pending_users.empty? %>
+	<h1>Pending Accounts</h1>
+	<table class="datagrid">
+	  <thead class="datagrid">
+			<th width="54" align="left">&nbsp;</th>
+	    <th width="175" align="left">&nbsp;&nbsp;Name</th>
+			<th width="200">&nbsp;Email</th>
+			<th width="100" align="center">&nbsp;Phone</th>
+			<th width="100" align="center">&nbsp;Approve/Reject</th>
+	  </thead>
+
+		<% for user in @pending_users %>  
+		  <tr class="<%= cycle('dg_list_line_odd', 'dg_list_line_even') %>">  
+		    <td valign="center">&nbsp;<%= image_tag avatar_url(user) %></td>
+		  	<td>&nbsp;<%= link_to user.name, user_path(user) %></td>  
+		    <td>&nbsp;<%= user.email %></td>
+				<td align="center">&nbsp;<%= number_to_phone user.phone %></td>  
+	    	<td align="center">
+					<%= link_to(image_tag("icons/check_green.gif", :border => 0), approve_user_path(user)) %>&nbsp;
+		    	<%= link_to(image_tag("icons/close.gif", :border => 0), reject_user_path(user)) %>
+				</td>  
+		  </tr>  
+		<% end %>
+	</table>
+	<p>&nbsp;</p>
+<% end %>
+
 <h1>Manage Accounts</h1>
 <table class="datagrid">
   <thead class="datagrid">
 		<th width="54" align="left">&nbsp;</th>
     <th width="175" align="left">&nbsp;&nbsp;Name</th>
 		<th width="200">&nbsp;Email</th>
-		<th width="100" align="center">&nbsp;Phone</th>
+		<th width="80" align="center">&nbsp;Phone</th>
 		<% unless current_user.is_partner? %>
+			<th width="80" align="center">&nbsp;Status</th>
 			<th>&nbsp;</th>
 		<% end %>
   </thead>
@@ -21,6 +49,7 @@
 	    <td>&nbsp;<%= user.email %></td>
 			<td align="center">&nbsp;<%= number_to_phone user.phone %></td>  
 			<% unless current_user.is_partner? %>
+				<td align="center">&nbsp;<%= user.current_status %></td>
 	    	<td align="center">
 					<%= link_to(image_tag("icons/edit_dg.gif", :border => 0), edit_user_path(user)) %>&nbsp;
 		    	<%= link_to(image_tag("icons/delete_dg.gif", :border => 0), user_path(user), :confirm => 'Are you sure you wish to deactivate this user?', :method => :delete) %>
