--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <%  unless current_user.is_partner? %>
-	<div id="add_widget"><%= link_to '+ Add a New Category', new_category_path %></div>
+	<div id="add_widget"><%= link_to(image_tag("/images/icons/add_blue_small.gif", :border => 0), new_category_path) %> <%= link_to 'Add a New Category', new_category_path %></div>
 <% end %>
 
 <h1>Categories</h1>
