--- a/app/views/colors/index.html.erb
+++ b/app/views/colors/index.html.erb
@@ -1,5 +1,5 @@
 <% unless current_user.is_partner? %>
-	<div id="add_widget"><%= link_to '+ Add a New Color', new_color_path %></div>
+	<div id="add_widget"><%= link_to(image_tag("/images/icons/add_blue_small.gif", :border => 0), new_color_path) %> <%= link_to 'Add a New Color', new_color_path %></div>
 <% end %>
 
 <h1>Colors</h1>
