--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
 <% unless current_user.is_partner? %>
-	<div id="add_widget"><%= link_to '+ Add a New Item', new_item_path %></div>
+	<div id="add_widget"><%= link_to(image_tag("/images/icons/add_blue_small.gif", :border => 0), new_item_path) %> <%= link_to "Add a New Item", new_item_path %></div>
 <% end %>
 
 <table border="0">
