--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 							<div id="welcome">
 								<% if user_signed_in? %>
 									Welcome, <%= current_user.first_name %>!<br />
-									<a href="/profile">Account Settings</a> | 
+									<%= link_to "Account Settings", edit_user_registration_path %> | 
 									<%= link_to "Logout", destroy_user_session_path %>
 								<% end %>
 							</div><!-- End of welcome div -->
