--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,5 +1,5 @@
-<% unless current_user.is_partner? %>
-	<div id="add_widget"><%= link_to '+ Add a New User', new_user_path %></div>
+<% if current_user.is_admin? %>
+	<div id="add_widget"><%= link_to(image_tag("/images/icons/add_blue_small.gif", :border => 0), new_user_path) %> <%= link_to 'Add a New User', new_user_path %></div>
 <% end %>
 
 <% if current_user.is_admin? && !@pending_users.empty? %>
