--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -43,5 +43,17 @@
 	font-size: 120%;
 }
 
+.actions {
+	padding: 10px 0px 10px 0px;
+}
+
+.actions input {
+	background:#4d7bad; color:#fff; 
+	font-size: 120%;
+	cursor:pointer;
+	padding:5px 10px; 
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
 
 
