Mop up on Jeria's list

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,7 +2,7 @@
 	<div id="add_widget"><%= link_to(image_tag("/images/icons/add_blue_small.gif", :border => 0), new_organization_path) %> <%= link_to 'Add a New Organization', new_organization_path %></div>
 <% end %>
 
-<h1>Organizations</h1>
+<h1>Manage Organizations</h1>
 
 <table class="datagrid">
   <thead class="datagrid">
