--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -69,4 +69,6 @@
   </div>
 <% end %>
 
-<%= link_to 'Back', user_list_path %>
+<%= image_tag "forms/items_actions.png" %><br/>
+<%= link_to(image_tag("icons/back_arrow.png", :border => 0), user_list_path)  %>&nbsp;<%= link_to "Back to Users", user_list_path %>
+
