--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
 	<div id="add_widget"><%= link_to(image_tag("/images/icons/add_blue_small.gif", :border => 0), new_category_path) %> <%= link_to 'Add a New Category', new_category_path %></div>
 <% end %>
 
-<h1>Categories</h1>
+<h1>Manage Categories</h1>
 
 <table class="datagrid">
   <thead class="datagrid">
