--- a/app/views/colors/index.html.erb
+++ b/app/views/colors/index.html.erb
@@ -2,7 +2,7 @@
 	<div id="add_widget"><%= link_to(image_tag("/images/icons/add_blue_small.gif", :border => 0), new_color_path) %> <%= link_to 'Add a New Color', new_color_path %></div>
 <% end %>
 
-<h1>Colors</h1>
+<h1>Manage Colors</h1>
 
 <table class="datagrid">
   <thead class="datagrid">
