--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -2,7 +2,7 @@
 	<div id="add_widget"><%= link_to(image_tag("/images/icons/add_blue_small.gif", :border => 0), new_location_path) %> <%= link_to 'Add a New Location', new_location_path %></div>
 <% end %>
 
-<h1>Warehouse Locations</h1>
+<h1>Manage Warehouse Locations</h1>
 
 <table class="datagrid">
   <thead class="datagrid">
