--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -4,5 +4,4 @@
 
 <br/>
 <%= image_tag "forms/items_actions.png" %><br/>
-<%= link_to(image_tag("icons/back_arrow.png", :border => 0), organization_path(@organization))  %>&nbsp;<%= link_to "#{@organization.name} details", @organization %>&nbsp;|&nbsp;
-<%= link_to(image_tag("icons/back_arrow.png", :border => 0), organizations_path(@organizations))  %>&nbsp;<%= link_to "Back to Organizations", organizations_path(@organizations) %>
+<%= link_to(image_tag("icons/back_arrow.png", :border => 0), organizations_path)  %>&nbsp;<%= link_to "Back to Organizations", organizations_path %>
