Mop up on Jeria's list

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,4 @@
-<h1>About the UIF Thalia System</h1>
+<h1>About the Inventory Management System</h1>
 
 <div id="main_column">
 	<p>This is the most amazing, marvelous, tremendous, glass-shattering, 
