--- a/app/views/home/policy.html.erb
+++ b/app/views/home/policy.html.erb
@@ -1,4 +1,4 @@
-<h1>UIF Fine Arts Loan Policy</h1>
+<h1>Loan Policy</h1>
 
 <div id="main_column">
 	<p>The policy is simple: return any props or costumes you borrow 
