--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -33,14 +33,14 @@
 		<td width="40" rowspan="2">&nbsp;</td>
 		
 		<!-- List column -->
-		<td class="my_list" valign="top" width="300" rowspan="2">
-			<strong>My Current List</strong>
+		<td class="my_list" valign="top" width="300" rowspan="3">
+			<%= render :partial => "partials/current_list" %>
 		</td>
 	</tr>
 	
 	<!-- Bottom left cell -->
 	<tr>
-		<td valign="top" class="show">
+		<td valign="top">
 			<%= image_tag "forms/show_organization_members.png" %>
 			<%= render :partial => "organization_members" %>
 			
