Users are approved first

--- a/app/views/home/_pending_users.html.erb
+++ b/app/views/home/_pending_users.html.erb
@@ -3,10 +3,10 @@
 		<%= image_tag "forms/pending_accounts.png" %>
 		<table class="datagrid">
 		  <thead class="datagrid">
-		    <th width="120" align="left">&nbsp;&nbsp;Name</th>
+		    <th width="130" align="left">&nbsp;&nbsp;Name</th>
 				<th width="110" align="center">&nbsp;Phone</th>
 				<th width="130" align="center">&nbsp;Email</th>
-				<th width="80" align="center">&nbsp;Approve/Reject</th>
+				<th width="70" align="center">&nbsp;Approve?</th>
 		  </thead>
 
 			<% for user in @pending_users %>  
