--- a/public/stylesheets/datagrid.css
+++ b/public/stylesheets/datagrid.css
@@ -78,13 +78,13 @@ td {
 	outline-width: 0;
 }
 .dg_list_line_even img {
-	vertical-align: middle;
-	padding: 0px 0px 2px 8px;
+	/*vertical-align: middle;*/
+	padding: 10px 2px 2px 2px;
 	outline-width: 0;
 }
 .dg_list_line_odd img {
-	vertical-align: middle;
-	padding: 0px 0px 2px 8px;
+	/*vertical-align: middle;*/
+	padding: 10px 2px 2px 2px;
 	outline-width: 0;
 }
 .dg_list_line_odd:hover {
