Removed redundant div#nav tags

--- a/app/views/partials/_nav_coordinator.html.erb
+++ b/app/views/partials/_nav_coordinator.html.erb
@@ -1,4 +1,4 @@
-<div id="nav">
+<!-- <div id="nav"> -->
 	<ul>
 		<% if current_user.role == 'admin' %>
 		
@@ -30,4 +30,4 @@
 		<% end %>
 	</div>
 
-</div>
+<!-- </div> -->
