Changed about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,9 +1,34 @@
 <h1>About the Inventory Management System</h1>
 
 <div id="main_column">
-	<p>This is the most amazing, marvelous, tremendous, glass-shattering, 
-		earth-shaking system ever conceived by the mind of man.  Well, at 
-		least we'd like to think that.  In any case, this little bit of 
-		software is brought to you courtesy of <strong>Team 8th Wonder</strong>, from 
-		Carnegie Mellon's Information Systems summer program.  Enjoy.</p>
+	<p>Urban Impact is a faith based non-profit organization that helps families by providing assistance to
+	low-income communities on the North Side of Pittsburgh, Pennsylvania. This Inventory Management
+	System was created by Team 8th Wonder and allows for the identification, location, and reservation of
+	costumes and props for the Urban Impact Foundation and their partner organizations. Specifically, this
+	system caters to the Urban Impact Performing Arts Program by enabling them to add, edit, update, and
+	delete items in their theater inventory. This Inventory Management System also helps Urban Impact with
+	loaning items to their partner organizations and maintaining an accurate count of costumes, props and
+	staging items in their inventory and what they have loaned to others.</p>
+
+	<p>The Inventory Management System was designed and developed as a part of a service-learning project
+	in the Information Systems Program at Carnegie Mellon University. During the summer of 2011,
+	eight students participate in the six-week internship focused on information systems applications in the
+	community. The team, Team 8th Wonder, consisted of 8 unique individuals from different Historically
+	Black Colleges and Universities:
+	<ul>
+	<li>Devany Brown, Spelman College</li>
+	<li>Gabbrielle Buchanan, Hampton University</li>
+	<li>Wayne Dennis, Oakwood University</li>
+	<li>James Johnson, Hampton University</li>
+	<li>Tanesha Miller, Oakwood University</li>
+	<li>David Munyaka, Kentucky State University</li>
+	<li>Jalicia Price, Prairie View A&M University</li>
+	<li>Kahlil Wallace, Oakwood University</li>
+	</ul>
+	</p>
+	
+	<p>
+		Details about the project and team member backgrounds can be found at: 
+		<%= link_to "http://pawn.hss.cmu.edu/~uifteam", "http://pawn.hss.cmu.edu/~uifteam" %>.
+	</p>
 </div>
