Changes to requests

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -82,7 +82,7 @@
 						<%= render "photo_fields", :f => photo_form %>
 					<% end %> <!-- end of one photo form -->
 				<% end %>
-				<%= f.link_to_add "Add Another Photo", :photos %>
+				<%= f.link_to_add "Add another photo", :photos %>
 			</div>
 			<p class="supertiny">&nbsp;</p>
 			
