--- a/app/views/partials/_current_list.html.erb
+++ b/app/views/partials/_current_list.html.erb
@@ -12,6 +12,7 @@
 		</div>
 
 	<% end %>
+	<p class="supertiny">&nbsp;</p>
+	<p><%= button_to "Submit Request", new_request_path, :id => "add_button", :method => :get %></p>
+	
 <% end %>
-
-<%# add a checkout/print button %>
