--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -18,7 +18,7 @@
 	<% end %>
   <div class="field">
     <%= f.label :production %><br />
-    <%= f.text_field :production %>
+    <%= f.text_field :production, :size => 42 %>
   </div>
 	<div class="field">
     <%= f.label :date_needed_by %><br />
