--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,6 +1,18 @@
-<h1>Editing request</h1>
+<h1>Edit Request</h1>
 
-<%= render 'form' %>
+<table border="0" cellspacing="5" cellpadding="5">
+	<tr>
+		<td width="600" valign="top">
+			<%= render 'form' %>
+		</td>
+		<td>&nbsp;</td>
+		<td class="my_list" valign="top" width="250">
+			<%= render :partial => "partials/items_requested" %>
+		</td>
+	</tr>
+</table>
+<p class="supertiny">&nbsp;</p>
 
-<%= link_to 'Show', @request %> |
-<%= link_to 'Back', requests_path %>
+<%= image_tag "forms/items_actions.png" %><br/>
+<%= link_to(image_tag("icons/back_arrow.png", :border => 0), requests_path)  %>&nbsp;<%= link_to "Back to Requests", requests_path %>
+
