--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -14,7 +14,9 @@
 <p class="supertiny">&nbsp;</p>
 
 <%= image_tag "forms/items_actions.png" %><br/>
-<%= link_to(image_tag("icons/back_arrow.png", :border => 0), requests_path)  %>&nbsp;<%= link_to "Back to Requests", requests_path %>
+<p><%= link_to(image_tag("icons/edit_dg.gif", :border => 0), edit_request_path(@request))  %>&nbsp;<%= link_to 'Edit this Request', edit_request_path(@request) %> &nbsp;|&nbsp;
+<%= link_to(image_tag("icons/delete_dg.gif", :border => 0), request_path(@request), :confirm => 'Are you sure you wish to delete this request?', :method => :delete) %>&nbsp;<%= link_to 'Delete this Request', request_path(@request), :confirm => 'Are you sure you wish to delete this request?', :method => :delete %> &nbsp;|&nbsp;
+<%= link_to(image_tag("icons/back_arrow.png", :border => 0), requests_path)  %>&nbsp;<%= link_to "Back to Requests", requests_path %></p>
 
 
 
