--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -2,5 +2,5 @@
 <% @this_action = 'edit' %>
 <%= render 'form' %>
 
-Back to <%= link_to "#{@item.name} details", @item %> <br />
-Back to <%= link_to 'list of all items', items_path %>
+<%= image_tag "forms/items_actions.png" %><br/>
+<%= link_to(image_tag("icons/back_arrow.png", :border => 0), items_path)  %>&nbsp;<%= link_to "Back to Items", items_path %>
