--- a/app/views/user/_user_requests.html.erb
+++ b/app/views/user/_user_requests.html.erb
@@ -7,8 +7,8 @@
 
 	<% for request in @user.requests %>  
 	  <tr class="<%= cycle('dg_list_line_odd', 'dg_list_line_even') %>">  
-	  	<td>&nbsp;<%= link_to request.created_at.strftime("%b %e, %Y") %></td>  
-			<td align="center">&nbsp;<%= request.production %></td>  
+	  	<td>&nbsp;<%= link_to request.created_at.strftime("%b %e, %Y"), request_path(request) %></td>  
+			<td align="center">&nbsp;<%= link_to request.production, request_path(request) %></td>  
 	  </tr>  
 	<% end %>
 </table>
